@@ -791,6 +791,10 @@ pm-barium-froth=Barium froth
 pm-beryllium-hydroxide=Beryllium hydroxide
 pm-molten-uhrlumin-precursor-alloy=Molten uhrlumin precursor alloy
 pm-molten-uhrlumin=Molten uhrlumin
+pm-nitric-oxide=Nitric oxide
+pm-nitric-acid=Nitric acid
+pm-aqua-regia=Aqua regia
+pm-nitrosyl-chloride=Nitrosyl chloride
 
 [recipe-name]
 pm-stone-crushing=Stone crushing
