@@ -1711,6 +1711,44 @@ data:extend({
     flow_color = {r = 0.1, g = 0.4, b = 0.14},
     auto_barrel = false
   },
+  {
+    type = "fluid",
+    name = "pm-nitric-oxide",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/nitric-oxide.png",
+    default_temperature = 15,
+    base_color = {r = 0.38, g = 0.49, b = 0.74},
+    flow_color = {r = 0.38, g = 0.49, b = 0.74},
+  },
+  {
+    type = "fluid",
+    name = "pm-nitric-acid",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/nitric-acid.png",
+    default_temperature = 15,
+    base_color = {r = 0.38, g = 0.49, b = 0.74},
+    flow_color = {r = 0.38, g = 0.49, b = 0.74},
+    auto_barrel = false,
+  },
+  {
+    type = "fluid",
+    name = "pm-aqua-regia",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/aqua-regia.png",
+    default_temperature = 15,
+    base_color = {r = 0.38, g = 0.49, b = 0.74},
+    flow_color = {r = 0.38, g = 0.49, b = 0.74},
+    auto_barrel = false,
+  },
+  {
+    type = "fluid",
+    name = "pm-nitrosyl-chloride",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/nitrosyl-chloride.png",
+    default_temperature = 15,
+    base_color = {r = 0.38, g = 0.49, b = 0.74},
+    flow_color = {r = 0.38, g = 0.49, b = 0.74},
+  },
 
 	{
 		type = "fluid",
